{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 119,
  "lineage": "9e81ee60-edb2-583f-fd8f-1fea8434e150",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "puppeteer_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.226.22.221",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-02-13T12:51:46.563-08:00",
            "id": "projects/probable-scout-446005-v7/regions/us-central1/addresses/puppeteer-ip",
            "name": "puppeteer-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "probable-scout-446005-v7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/regions/us-central1/addresses/puppeteer-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-13T12:52:08.527-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/probable-scout-446005-v7/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/networks/puppeteer-network",
            "priority": 1000,
            "project": "probable-scout-446005-v7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "puppeteer"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.puppeteer_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-13T12:52:08.685-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/probable-scout-446005-v7/global/firewalls/allow-https",
            "log_config": [],
            "name": "allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/networks/puppeteer-network",
            "priority": 1000,
            "project": "probable-scout-446005-v7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/firewalls/allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "puppeteer"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.puppeteer_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-13T12:52:08.371-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/probable-scout-446005-v7/global/firewalls/allow-ssh-public",
            "log_config": [],
            "name": "allow-ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/networks/puppeteer-network",
            "priority": 1000,
            "project": "probable-scout-446005-v7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/firewalls/allow-ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "puppeteer"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.puppeteer_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "puppeteer_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20250130",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/zones/us-central1-a/disks/puppeteer-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/probable-scout-446005-v7/zones/us-central1-a/instances/puppeteer-vm",
            "instance_id": "6118885127683827068",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "oC5jZeS3KX4=",
            "metadata_startup_script": "#!/bin/bash\napt-get update -y\napt-get install -y wget unzip git curl nginx\n\n# Instalar Node.js 18+ (necesario para Puppeteer)\ncurl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -\napt-get install -y nodejs\n\n# Instalar PM2 globalmente\nnpm install -g pm2\n\n# Descargar repositorio\nmkdir -p /opt\ncd /opt\ngit clone https://github.com/LuisAncelVasquezVillavicencio/server-puppeteer.git\n\n# Dar permisos adecuados\nchown -R root:root /opt/s [...]
            "name": "puppeteer-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.226.22.221",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/networks/puppeteer-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/regions/us-central1/subnetworks/puppeteer-subnetwork",
                "subnetwork_project": "probable-scout-446005-v7"
              }
            ],
            "project": "probable-scout-446005-v7",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/zones/us-central1-a/instances/puppeteer-vm",
            "service_account": [
              {
                "email": "terraform@probable-scout-446005-v7.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "puppeteer"
            ],
            "tags_fingerprint": "7ODAiBK4tjc=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_address.puppeteer_ip",
            "google_compute_network.puppeteer_network",
            "google_compute_subnetwork.puppeteer_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "puppeteer_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/probable-scout-446005-v7/global/networks/puppeteer-network",
            "mtu": 0,
            "name": "puppeteer-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "probable-scout-446005-v7",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/networks/puppeteer-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "puppeteer_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-13T12:52:09.047-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/probable-scout-446005-v7/regions/us-central1/subnetworks/puppeteer-subnetwork",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "puppeteer-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/global/networks/puppeteer-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "probable-scout-446005-v7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/probable-scout-446005-v7/regions/us-central1/subnetworks/puppeteer-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.puppeteer_network"
          ]
        }
      ]
    }
  ]
}